* 优化代码